added waiting form

--- a/index.html
+++ b/index.html
@@ -60,6 +60,75 @@
                     <div class="modal-body">
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 
+                        <form method="POST" action="https://akoskarova.activehosted.com/proc.php" id="_form_908_" class="_form _form_908 _inline-form  _dark" novalidate data-styles-version="5">
+                        <input type="hidden" name="u" value="908" />
+                        <input type="hidden" name="f" value="908" />
+                        <input type="hidden" name="s" />
+                        <input type="hidden" name="c" value="0" />
+                        <input type="hidden" name="m" value="0" />
+                        <input type="hidden" name="act" value="sub" />
+                        <input type="hidden" name="v" value="2" />
+                        <input type="hidden" name="or" value="ffc8bdc23634de7e3806e85ec1348c85" />
+                        <div class="_form-content">
+                            <div class="_form_element _x08383534 _full_width _clear" >
+                            <title class="_form-title">
+                                Regjistrohu në akademinë Full Stack + AI duke plotësuar formën më poshtë.
+                            </title>
+                            </div>
+                            <div class="_form_element _x10800584 _full_width " >
+                            <label for="fullname" class="_form-label">
+                                Full Name
+                            </label>
+                            <div class="_field-wrapper">
+                                <input type="text" id="fullname" name="fullname" placeholder="Type your name" />
+                            </div>
+                            </div>
+                            <div class="_form_element _x60169031 _full_width " >
+                            <label for="email" class="_form-label">
+                                Email<span class="field-required">
+                                *
+                            </span>
+                            </label>
+                            <div class="_field-wrapper">
+                            <input type="text" id="email" name="email" placeholder="Type your email" required/>
+                            </div>
+                        </div>
+                        <div class="_form_element _x78500168 _full_width " >
+                            <label for="phone" class="_form-label">
+                            Phone<span class="field-required">
+                            *
+                            </span>
+                        </label>
+                        <div class="_field-wrapper">
+                            <input type="text" id="phone" name="phone" placeholder="Type your phone number" required/>
+                        </div>
+                        </div>
+                        <div class="_form_element _x61045189 _full_width " >
+                        <label for="ls" class="_form-label">
+                            Please verify your request.<span class="field-required">
+                            *
+                        </span>
+                        </label>
+                        <div class="g-recaptcha" data-sitekey="6LcwIw8TAAAAACP1ysM08EhCgzd6q5JAOUR1a0Go">
+                        </div>
+                        </div>
+                        <label for="sms_consent" class="sms_consent_checkbox">
+                        <input type="checkbox" id="sms_consent" name="sms_consent" required />
+                        <div class="sms_consent_message">
+                        By submitting this form and signing up for texts, you consent to receive marketing text messages (e.g. promos, cart reminders) from [Your Company Name] at the number provided. Consent is not a condition of purchase. Msg & data rates may apply. Msg frequency varies. Unsubscribe at any time by replying STOP.
+                        </div>
+                        </label>
+                        <div class="_button-wrapper _full_width">
+                        <button id="_form_908_submit" class="_submit" type="submit">
+                        Submit
+                        </button>
+                        </div>
+                        <div class="_clear-element">
+                        </div>
+                        </div>
+                        <div class="_form-thank-you" style="display:none;">
+                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
